<resources>
    <string name="app_name">BudgetManagement</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_history">History</string>
    <string name="title_transaction">Transaction</string>
    <string name="title_category">Category</string>
    <string name="default_item_title_value">This is title</string>
    <string name="default_amount_value">0.00</string>
    <string name="polish_currency">zł</string>
    <string name="default_date_in_item">26 Lut 2020</string>
    <string name="sort_by_amount">Po cenie</string>
    <string name="sort_alphabetical">Alfabetycznie</string>
    <string name="sort_by_date">Po danie</string>
    <string name="are_you_sure_to_delete">Czy na pewno chcesz usunąć?</string>
    <string name="delete">Usuń</string>
    <string name="cancel">Anuluj</string>
    <string name="no_data">Brak danych</string>
    <string name="transaction_title">Nazwa</string>
    <string name="amount">Kwota</string>
    <string name="date">Data</string>
    <string name="default_category">Różne</string>
    <string name="icon">Icon</string>
    <string name="add">Dodaj</string>
    <string name="select_date">Wybierz datę</string>
    <string name="field_cant_be_empty">Pole nie może być puste!</string>
    <string name="high_to_low">Malejąco</string>
    <string name="low_to_high">Rosnąco</string>
    <string name="category_example_various">Różne</string>
    <string name="category_example_foodstuff">Spożywcze</string>
    <string name="category_example_salary">Pensje</string>
    <string name="income_statement_content_desc">Income statement sorting flag</string>
    <string name="shadow_reverse_content_desc">Shadow reverse sorting flag</string>
    <string name="add_button_content_desc">Button to add new done transaction</string>
    <string name="select_category">Wybierz kategorię</string>
    <string name="reset">Reset</string>
    <string name="finish">Gotowe</string>
    <string name="sortByDateIcon">sortByDateIcon</string>
    <string name="sortByAmountIcon">sortByAmountIcon</string>
    <string name="sortByNameIcon">sortByNameIcon</string>
    <string name="january">Styczeń</string>
    <string name="february">Luty</string>
    <string name="march">Marzec</string>
    <string name="april">Kwiecień</string>
    <string name="may">Maj</string>
    <string name="june">Czerwiec</string>
    <string name="july">Lipiec</string>
    <string name="august">Sierpień</string>
    <string name="september">Wrzesień</string>
    <string name="october">Październik</string>
    <string name="november">Listopad</string>
    <string name="december">Grudzień</string>
    <string name="outstanding_payments">Zaległe płatności</string>
    <string name="amount_balance">Saldo:</string>
    <string name="never">Nigdy</string>
    <string name="Pay">Opłać</string>
    <string name="remain">Pozostało</string>
    <string name="after_the_deadline">Po terminie</string>
    <string name="paid">Opłacone</string>
    <string name="realized">Zrealizowano</string>
    <string name="cancel_completed">Anuluj realizację</string>
    <string name="realize">Zrealizuj</string>
    <string name="empty_field">Puste pole!</string>
    <string name="each_day">Co dzień</string>
    <string name="each_week">Co tydzień</string>
    <string name="each_month">Co miesiąc</string>
    <string name="each_quarter">Co kwartał</string>
    <string name="each_year">Co rok</string>
    <string name="inDays">za</string>
    <string name="forDays">od</string>
    <string name="not_enough_to_generate_cyclical_change_endDate_or_timeBetween">Wykona się tylko raz, zmień datę lub okres</string>
    <string name="edit">Edytuj</string>
    <string name="error_element_with_this_id_was_not_found">Wystąpił błąd! Nie ma takiego elementu w bazie danych</string>
    <string name="settings">Settings</string>
    <string name="today">Dziś</string>
    <string name="category_icon">category icon</string>
    <string name="add_new_category">Dodaj nową kategorię</string>
    <string name="month_budget_planning">Planowany miesięczny budżet</string>
    <string name="Icon">Ikonka</string>
    <string name="cyclical_transaction">Transakcja cykliczna</string>
    <string name="end_date">Do kiedy</string>
    <string name="new_transactions_dates">Daty nowych transakcji</string>
    <string name="ok">@android:string/ok</string>
    <string name="title">Tytuł</string>
    <string name="category">Kategoria</string>
    <string name="first_deadline">Pierwsza płatność</string>
    <string name="period_of_time">Okres</string>
    <string name="show_dates">Pokaż daty</string>
    <string name="income">Przychód</string>
    <string name="created_date">Utworzono</string>
    <string name="name">Nazwa</string>
    <string name="last_modification">Ostatnia modyfikacja</string>
    <string name="days">dni</string>
    <string name="left">Pozostało</string>
    <string name="deadline">Deadline</string>
    <string name="default_amount">0</string>
    <string name="budget">Budżet</string>
    <string name="create_similar">Utwórz podobne</string>
    <string name="execute">Zrealizuj</string>
    <string name="done_all_icon">done all icon</string>
    <string name="edit_icon">edit icon</string>
    <string name="content_copy_icon">content copy icon</string>
    <string name="profit_arrow_icon">profit arrow icon</string>
    <string name="done_check_sign">Done check sign</string>
    <string name="delete_icon">delete icon</string>
    <string name="duplicate_icon">duplicate icon</string>
    <string name="element_removed">Element został usunięty</string>
    <string name="coming_id_not_found">Not found transaction id</string>
    <string name="coming_not_found">Not found transaction with id:</string>
    <string name="category_id_not_found">Not found category id</string>
    <string name="not_found_id">Not found id</string>
    <string name="category_not_found">Category not found</string>
    <string name="amount_icon">amountIcon</string>
    <string name="month_icon">month icon</string>
    <string name="amount_with_currency">%1$s %2$s</string>
    <string name="amount_with_polish_currency">%1$s zł</string>
    <string name="amount_with_percent">%1$d%%</string>
    <string name="amount_with_percent_string">%1$s%%</string>
    <string name="amount_with_day_label">%1$s dni</string>
    <string name="amount_with_percentage_points">%1$spp</string>
    <string name="in_number_days">za %1$d dni</string>
    <string name="for_number_days">od %1$d dni</string>
    <string name="number_with_plus">+%1$s</string>
    <string name="number_with_minus">-%1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loss">Zobowiązania</string>
    <string name="profit">Dochód</string>
    <string name="currency">zł</string>
    <string name="transaction_icon_desc">Transaction for transaction amount</string>
    <string name="selectDateToCompare">Edit dates in period to edit</string>
    <string name="date_example">2022 lisopad</string>
    <string name="incomes">Przychody</string>
    <string name="profits">Dochody</string>
    <string name="average_after_deadline">Średnio po terminie</string>
    <string name="paid_on_time">Zapłacone w terminie</string>
    <string name="transactions">Transakcji</string>
    <string name="default_year">2023</string>
    <string name="details">Szczegóły</string>
    <string name="add_button_desc">Button to add new category</string>
    <string name="color">Kolor</string>
    <string name="select_color">Wybierz kolor</string>
    <string name="fragment_name_new_category">Nowa kategoria</string>
    <string name="fragment_name_new_transactions">Nowa transakcja</string>
    <string name="fragment_name_edit">Edycja</string>
    <string name="fragment_name_details">Szczegóły</string>
    <string name="fragment_name_settings">Ustawienia</string>
    <string name="fragment_name_statistics">Statystyki</string>
    <string name="fragment_name_transactions">Transakcje</string>
    <string name="fragment_name_categories">Kategorie</string>
    <string name="add_category">Dodaj kategorię</string>
    <string name="number_example">0</string>
    <string name="remaining_days_example">za 0 dni</string>
    <string name="period_statistic">Statystyki okresowe</string>
    <string name="statistics_card_image">Image for statistics fragment card</string>
    <string name="statistic_move_arrow">Right arrow to move to statistic fragment</string>
    <string name="compare_periods">Porównanie okresów</string>
    <string name="categories_statistics">Podsumowanie kategorii</string>
    <string name="next_payment">Najbliższy wydatek</string>
    <string name="global_statistics_negative_icon">Icon to show negative characteristic of card content</string>
    <string name="next_income">Najbliższy zysk</string>
    <string name="global_statistics_positive_icon">Icon to show positive characteristic of card content</string>
    <string name="date_in_day_month_pattern_example">1 jan</string>
    <string name="executed">Zrealizowano</string>
    <string name="executedDate">Data realizacji</string>
</resources>