<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="20dp"
    android:orientation="vertical"
    android:id="@+id/buttons"
    tools:context=".ui.Coming.BottomSheetDialogComing">

    <LinearLayout
        android:id="@+id/executeLayout"
        style="@style/DetailsButtonLayout"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/executeIcon"
            style="@style/DetailsIconButtonField"
            android:src="@drawable/ic_baseline_done_all_24"
            android:contentDescription="@string/done_check_sign" />

        <TextView
            android:id="@+id/executeLabel"
            style="@style/DetailsLabelButtonField"
            android:text="@string/execute" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/duplicateLayout"
        style="@style/DetailsButtonLayout"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/duplicateIcon"
            style="@style/DetailsIconButtonField"
            android:src="@drawable/ic_baseline_content_copy_24"
            app:tint="@color/font_default"
            android:contentDescription="@string/duplicate_icon" />

        <TextView
            android:id="@+id/duplicateLabel"
            style="@style/DetailsLabelButtonField"
            android:text="@string/create_similar" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/editLayout"
        style="@style/DetailsButtonLayout"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/editIcon"
            style="@style/DetailsIconButtonField"
            android:src="@drawable/ic_baseline_edit_24"
            app:tint="@color/font_default"
            android:contentDescription="@string/edit_icon" />

        <TextView
            android:id="@+id/editLabel"
            style="@style/DetailsLabelButtonField"
            android:text="@string/edit" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/deleteLayout"
        style="@style/DetailsButtonLayout"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/deleteIcon"
            style="@style/DetailsIconButtonField"
            android:src="@drawable/ic_baseline_delete_24"
            app:tint="@color/mat_red"
            android:contentDescription="@string/delete_icon" />

        <TextView
            android:id="@+id/deleteLabel"
            style="@style/DetailsLabelButtonField"
            android:text="@string/delete"
            android:textColor="@color/mat_red"/>

    </LinearLayout>

</LinearLayout>