<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="categoryDetails" type="com.example.budgetmanagement.ui.details.CategoryDetails"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailsConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:background="@drawable/bottom_line_short"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        tools:context=".ui.category.CategoryElementDetails">

        <TextView
            android:id="@+id/categoryNameLabel"
            style="@style/DetailsLabelField"
            android:labelFor="@+id/categoryName"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/categoryName"
            style="@style/DetailsValueField"
            android:text="@{categoryDetails.name}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryNameLabel" />

        <TextView
            android:id="@+id/budgetLabel"
            style="@style/DetailsLabelField"
            android:labelFor="@+id/budget"
            android:text="@string/budget"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryName" />

        <ImageView
            android:id="@+id/profitIcon"
            style="@style/DetailsIconField"
            android:contentDescription="@string/amount_icon"
            android:src="@{categoryDetails.budgetIcon}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/budgetLabel" />

        <TextView
            android:id="@+id/budget"
            style="@style/DetailsValueField"
            android:layout_marginStart="5dp"
            android:text="@{categoryDetails.budget}"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/profitIcon"
            app:layout_constraintTop_toBottomOf="@+id/budgetLabel" />

        <TextView
            android:id="@+id/currency"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:gravity="bottom|center_horizontal"
            android:text="@string/polish_currency"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/budget"
            app:layout_constraintStart_toEndOf="@+id/budget" />

        <TextView
            android:id="@+id/iconLabel"
            style="@style/DetailsLabelField"
            android:labelFor="@+id/icon"
            android:text="@string/Icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/budget" />

        <ImageView
            android:id="@+id/icon"
            style="@style/DetailsIconField"
            android:src="@{categoryDetails.categoryIcon}"
            android:contentDescription="@string/category_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iconLabel" />

        <TextView
            android:id="@+id/addDateLabel"
            style="@style/DetailsLabelField"
            android:labelFor="@+id/addDate"
            android:text="@string/created_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon" />

        <TextView
            android:id="@+id/addDate"
            style="@style/DetailsValueField"
            android:text="@{categoryDetails.addDate}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addDateLabel" />

        <TextView
            android:id="@+id/editDateLabel"
            style="@style/DetailsLabelField"
            android:labelFor="@+id/addDate"
            android:text="@string/last_modification"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addDate" />

        <TextView
            android:id="@+id/editDate"
            style="@style/DetailsValueField"
            android:text="@{categoryDetails.lastEditDate}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editDateLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>