<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.category.AddNewCategoryElement">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleLayout"
        style="@style/TextInputLayoutCustomView"
        android:hint="@string/title"
        app:endIconDrawable="@drawable/block_smaller_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title"
            style="@style/TextInputEditTextCustomView"
            android:inputType="textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/iconPickerLayout"
        style="@style/LayoutExposedDropMenuCustomView"
        app:endIconDrawable="@drawable/ic_outline_widgets_24">

        <AutoCompleteTextView
            android:id="@+id/iconPicker"
            android:hint="@string/Icon"
            style="@style/AutoCompleteCustomView" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/colorPickerLayout"
        style="@style/LayoutExposedDropMenuCustomView">

        <AutoCompleteTextView
            android:id="@+id/colorPicker"
            android:hint="@string/color"
            style="@style/AutoCompleteCustomView" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amountLayout"
        style="@style/TextInputLayoutCustomView"
        app:endIconDrawable="@drawable/dollar_coin_smaller_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount"
            style="@style/TextInputEditTextCustomView"
            android:hint="@string/month_budget_planning"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/profitSwitch"
        android:theme="@style/SwitchMaterialTheme"
        style="@style/SwitchMaterialCustomView"
        android:text="@string/income" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/acceptButton"
        style="@style/addButton" />

</LinearLayout>