<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Coming.AddNewComingElement"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleLayout"
        style="@style/TextInputLayoutCustomView"
        android:hint="@string/title"
        app:endIconDrawable="@drawable/block_smaller_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title"
            style="@style/TextInputEditTextCustomView"
            android:inputType="textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amountLayout"
        style="@style/TextInputLayoutCustomView"
        android:hint="@string/amount"
        app:endIconDrawable="@drawable/dollar_coin_smaller_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount"
            style="@style/TextInputEditTextCustomView"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categorySelectorLayout"
        style="@style/TextInputLayoutCustomView"
        android:hint="@string/category"
        app:endIconDrawable="@drawable/ic_baseline_category_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/categorySelector"
            style="@style/TextInputEditTextCustomView"
            android:focusable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/startDateLayout"
        style="@style/TextInputLayoutCustomView"
        android:hint="@string/first_deadline"
        app:endIconDrawable="@drawable/calendar_smaller_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/startDate"
            style="@style/TextInputEditTextCustomView"
            android:focusable="false" />

        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/profitSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Przychód"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp" />
</merge>