<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="categorySimpleDataForBinding"
            type="com.example.budgetmanagement.ui.category.CategorySimpleDataForBinding" />
        <variable
            name="addNewCategory"
            type="com.example.budgetmanagement.ui.category.AddNewCategory" />
        <import type="android.graphics.drawable.Drawable"/>
        <variable
            name="selectedIcon"
            type="Drawable" />
        <variable
            name="selectedIconName"
            type="String" />
        <variable
            name="buttonTitle"
            type="String" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        tools:context=".ui.category.AddNewCategory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleLayout"
                style="@style/TextInputLayoutCustomView"
                android:hint="@string/title"
                app:endIconDrawable="@drawable/block_smaller_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title"
                    style="@style/TextInputEditTextCustomView"
                    android:text="@{categorySimpleDataForBinding.name}"
                    android:inputType="textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amountLayout"
                style="@style/TextInputLayoutCustomView"
                app:endIconDrawable="@drawable/dollar_coin_smaller_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amount"
                    style="@style/TextInputEditTextCustomView"
                    android:text="@{categorySimpleDataForBinding.budget}"
                    android:hint="@string/month_budget_planning"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/iconPickerLayout"
                app:endIconDrawable="@{selectedIcon}"
                style="@style/LayoutExposedDropMenuCustomView">

                <AutoCompleteTextView
                    android:id="@+id/iconPicker"
                    android:text="@{selectedIconName}"
                    style="@style/AutoCompleteCustomView"
                    android:hint="@string/Icon" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/colorPickerLayout"
                style="@style/LayoutExposedDropMenuCustomView">

                <AutoCompleteTextView
                    android:id="@+id/colorPicker"
                    style="@style/AutoCompleteCustomView"
                    android:hint="@string/color" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/profitSwitch"
                style="@style/SwitchMaterialCustomView"
                android:text="@string/income"
                android:checked="@{categorySimpleDataForBinding.isProfit}"
                android:theme="@style/SwitchMaterialTheme" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/acceptButton"
            android:layout_width="match_parent"
            android:onClick="@{() -> addNewCategory.acceptButtonClick()}"
            style="@style/addButton"
            android:text="@{buttonTitle}"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>